# Blackhole-OpenPLI

./: Makefile.am  configure.ac  enigma.py  skin.py
data/: Makefile.am
lib/dvb/: dvb.cpp  frontend.cpp
lib/python/: enigma_python.i
lib/python/Blackhole/: BhAddons.py  BhBlue.py  BhEI.py  BhEpgPanel.py  BhInfo.py  BhRed.py  BhSettings.py
lib/python/Components/: Makefile.am  config.py  language_cache.py
lib/python/Components/Converter/: Makefile.am
lib/python/Components/Renderer/: Makefile.am
lib/python/Plugins/SystemPlugins/WirelessLan/: Wlan.py  plugin.py
lib/python/Screens/: InfoBarGenerics.py  Makefile.am
lib/python/Tools/: Makefile.am
