installdir = $(pkglibdir)/python/Tools

install_PYTHON = \
	ASCIItranslit.py Alternatives.py BoundFunction.py CList.py Directories.py \
	Downloader.py Event.py FuzzyDate.py HardwareInfo.py ISO639.py Import.py \
	KeyBindings.py LoadPixmap.py Notifications.py NumericalTextInput.py \
	Profile.py RedirectOutput.py Transponder.py XMLTools.py __init__.py
